--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
 !/package.json
-!/LICENSE
 !/.npmignore
 logs
 *.log
@@ -38,9 +37,9 @@ junit.xml
 /dist/changelog.md
 /dist/version.txt
 !/.github/workflows/release.yml
-!/.mergify.yml
 !/.github/workflows/upgrade-main.yml
-!/.github/pull_request_template.md
+!/.prettierignore
+!/.prettierrc.json
 !/.npmrc
 !/test/
 !/tsconfig.dev.json
@@ -51,3 +50,8 @@ junit.xml
 .jsii
 tsconfig.json
 !/API.md
+!/LICENSE
+!/.github/workflows/auto-approve.yml
+!/.github/workflows/automerge.yml
+!/.github/workflows/upgrade-cdktf.yml
+!/.github/workflows/upgrade-node.yml
