--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "cdktf-construct-projen-template",
+  "name": "@cdktf/construct-projen-template",
+  "description": "A projen template for CDKTF constructs authored by HashiCorp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nara.kasbergen/cdktf-construct-projen-template.git"
+    "url": "https://github.com/cdktf/construct-projen-template.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -16,7 +17,6 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
-    "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -29,29 +29,35 @@
     "projen": "npx projen"
   },
   "author": {
-    "name": "Nara Kasbergen",
-    "email": "nara.kasbergen@gmail.com",
-    "organization": false
+    "name": "HashiCorp",
+    "url": "https://hashicorp.com",
+    "organization": true
   },
   "devDependencies": {
+    "@cdktf/provider-null": "8.0.0",
     "@types/jest": "^29.5.4",
-    "@types/node": "^16",
+    "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "cdktf": "0.13.0",
-    "constructs": "10.0.12",
+    "cdktf": "0.18.0",
+    "change-case": "^4.1.2",
+    "constructs": "10.0.25",
     "eslint": "^8",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.4",
     "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jsii": "^5.1.0",
     "jsii-diff": "^1.88.0",
     "jsii-docgen": "^9.1.2",
     "jsii-pacmak": "^1.88.0",
-    "jsii-rosetta": "~5.0.0",
+    "jsii-rosetta": "^5.1.0",
+    "node-fetch": "~2",
     "npm-check-updates": "^16",
+    "prettier": "^2.8.8",
     "projen": "^0.72.27",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
@@ -59,15 +65,22 @@
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "cdktf": "^0.13.0",
-    "constructs": "^10.0.12"
+    "@cdktf/provider-null": ">=8.0.0",
+    "cdktf": ">=0.18.0",
+    "constructs": "^10.0.25"
   },
   "keywords": [
     "cdk",
     "cdktf"
   ],
+  "engines": {
+    "node": ">= 18.12.0"
+  },
   "main": "lib/index.js",
-  "license": "Apache-2.0",
+  "license": "MPL-2.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "version": "0.0.0",
   "jest": {
     "testMatch": [
