chore: remove minMajorVersion from template

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -182,8 +182,7 @@
       "name": "release",
       "description": "Prepare a release from \"main\" branch",
       "env": {
-        "RELEASE": "true",
-        "MIN_MAJOR": "1"
+        "RELEASE": "true"
       },
       "steps": [
         {
