--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ tsconfig.json
 !/.github/workflows/automerge.yml
 !/.github/workflows/upgrade-cdktf.yml
 !/.github/workflows/upgrade-node.yml
+.yalc
+yalc.lock
