--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -2,7 +2,7 @@
 
 name: automerge
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - labeled
@@ -19,7 +19,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608
-      - name: Turn on automerge for this PR
+      - name: Turn on automerge for this PR by a trusted user or bot
+        if: github.event.pull_request.user.login == 'team-tf-cdk' || contains(fromJSON('["OWNER", "MEMBER", "COLLABORATOR"]'), github.event.pull_request.author_association) || github.actor == 'dependabot[bot]
         env:
           GH_TOKEN: ${{ secrets.PROJEN_GITHUB_TOKEN }}
         run: gh pr merge --auto --squash ${{ github.event.pull_request.number }}
