--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -251,13 +251,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@action-validator/cli,@action-validator/core,@types/jest,@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,change-case,constructs,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,eslint,jest,jest-junit,jsii-diff,jsii-docgen,jsii-pacmak,jsii-rosetta,jsii,prettier,projen,standard-version,ts-jest,ts-node,typescript"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --dep=dev,peer,prod,optional --filter=@action-validator/cli,@action-validator/core,@types/jest,@types/node,@typescript-eslint/eslint-plugin,@typescript-eslint/parser,change-case,constructs,eslint-config-prettier,eslint-import-resolver-typescript,eslint-plugin-import,eslint-plugin-prettier,eslint,jest,jest-junit,jsii-diff,jsii-docgen,jsii-pacmak,prettier,projen,standard-version,ts-jest,ts-node"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @action-validator/cli @action-validator/core @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser change-case constructs eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii prettier projen standard-version ts-jest ts-node typescript"
+          "exec": "yarn upgrade @action-validator/cli @action-validator/core @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser change-case constructs eslint-config-prettier eslint-import-resolver-typescript eslint-plugin-import eslint-plugin-prettier eslint jest jest-junit jsii-diff jsii-docgen jsii-pacmak prettier projen standard-version ts-jest ts-node"
         },
         {
           "exec": "npx projen"
