--- a/package.json
+++ b/package.json
@@ -52,17 +52,17 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
-    "jsii": "^5.2.0",
+    "jsii": "~5.2.0",
     "jsii-diff": "^1.93.0",
     "jsii-docgen": "^10.2.5",
     "jsii-pacmak": "^1.93.0",
-    "jsii-rosetta": "^5.2.0",
+    "jsii-rosetta": "~5.2.0",
     "prettier": "^2.8.8",
     "projen": "^0.77.5",
     "standard-version": "^9",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.2.0"
   },
   "peerDependencies": {
     "@cdktf/provider-null": ">=9.0.0",
