--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ jspm_packages/
 *.tgz
 .yarn-integrity
 .cache
-!/.projenrc.js
 /test-reports/
 junit.xml
 /coverage/
@@ -56,3 +55,4 @@ tsconfig.json
 !/.github/workflows/upgrade-node.yml
 .yalc
 yalc.lock
+!/.projenrc.ts
