--- a/.npmignore
+++ b/.npmignore
@@ -6,6 +6,8 @@ junit.xml
 permissions-backup.acl
 /dist/changelog.md
 /dist/version.txt
+/.prettierignore
+/.prettierrc.json
 /test/
 /tsconfig.dev.json
 /src/
@@ -24,5 +26,6 @@ tsconfig.tsbuildinfo
 scripts
 examples
 projenrc
-/.projenrc.ts
 .copywrite.hcl
+/.gitattributes
+/.projenrc.ts
