--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@typescript-eslint/parser": "^6",
     "cdktf": "0.20.0",
     "change-case": "^4.1.2",
-    "constructs": "10.0.25",
+    "constructs": "10.3.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -67,7 +67,7 @@
   "peerDependencies": {
     "@cdktf/provider-null": ">=10.0.0",
     "cdktf": ">=0.20.0",
-    "constructs": "^10.0.25"
+    "constructs": ">=10.3.0"
   },
   "keywords": [
     "cdk",
