--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
   "devDependencies": {
     "@action-validator/cli": "^0.5.4",
     "@action-validator/core": "^0.5.4",
-    "@cdktf/provider-null": "9.0.0",
+    "@cdktf/provider-null": "10.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
-    "cdktf": "0.19.0",
+    "cdktf": "0.20.0",
     "change-case": "^4.1.2",
-    "constructs": "10.0.25",
+    "constructs": "10.3.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -65,9 +65,9 @@
     "typescript": "~5.2.0"
   },
   "peerDependencies": {
-    "@cdktf/provider-null": ">=9.0.0",
-    "cdktf": ">=0.19.0",
-    "constructs": "^10.0.25"
+    "@cdktf/provider-null": ">=10.0.0",
+    "cdktf": ">=0.20.0",
+    "constructs": ">=10.3.0"
   },
   "keywords": [
     "cdk",
