chore(deps): upgrade dependencies
Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/cdktf/construct-projen-template/actions/runs/7865665436

------

*Automatically created by projen via the "upgrade-main" workflow*

Signed-off-by: team-tf-cdk <github-team-tf-cdk@hashicorp.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,6 +60,7 @@ jobs:
         with:
           name: build-artifact
           path: dist
+          overwrite: true
   release_github:
     name: Publish to GitHub Releases
     needs: release
