--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "jest-junit": "^15",
     "jsii": "~5.2.0",
     "jsii-diff": "^1.98.0",
-    "jsii-docgen": "^10.4.9",
+    "jsii-docgen": "^10.4.10",
     "jsii-pacmak": "^1.98.0",
     "jsii-rosetta": "~5.2.0",
     "prettier": "^2.8.8",
-    "projen": "^0.81.15",
+    "projen": "^0.81.16",
     "standard-version": "^9",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "typescript": "~5.2.0"
   },
@@ -80,6 +80,7 @@
   "license": "MPL-2.0",
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.ts?(x)",
       "<rootDir>/@(test|src)/**/*(*.)@(spec|test).ts?(x)"
