chore(deps): upgrade dependencies
Upgrades project dependencies. See details in [workflow run].

[Workflow Run]: https://github.com/cdktf/construct-projen-template/actions/runs/10551293832

------

*Automatically created by projen via the "upgrade-main" workflow*

Signed-off-by: team-tf-cdk <github-team-tf-cdk@hashicorp.com>

--- a/.github/workflows/upgrade-node.yml
+++ b/.github/workflows/upgrade-node.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: 21 8 * * *
   workflow_dispatch: {}
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: {}
 jobs:
   upgrade:
     name: Upgrade Node.js
