--- a/.github/workflows/upgrade-cdktf.yml
+++ b/.github/workflows/upgrade-cdktf.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: 18 */6 * * *
   workflow_dispatch: {}
-concurrency: ${{ github.workflow }}-${{ github.ref }}
+concurrency: {}
 jobs:
   upgrade:
     name: Upgrade CDKTF
