--- a/package.json
+++ b/package.json
@@ -44,22 +44,22 @@
     "@typescript-eslint/parser": "^6",
     "cdktf": "0.20.0",
     "change-case": "^4.1.2",
+    "commit-and-tag-version": "^12",
     "constructs": "10.3.0",
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
     "jsii": "~5.4.0",
-    "jsii-diff": "^1.102.0",
-    "jsii-docgen": "^10.4.20",
-    "jsii-pacmak": "^1.102.0",
+    "jsii-diff": "^1.103.1",
+    "jsii-docgen": "^10.5.0",
+    "jsii-pacmak": "^1.103.1",
     "jsii-rosetta": "~5.4.0",
     "prettier": "^2.8.8",
-    "projen": "^0.86.0",
-    "standard-version": "^9",
+    "projen": "^0.86.6",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.0"
