--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:js": "npx projen package:js",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -49,7 +50,7 @@
     "eslint": "^8",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
     "jest-junit": "^15",
@@ -59,7 +60,7 @@
     "jsii-pacmak": "^1.103.1",
     "jsii-rosetta": "~5.4.0",
     "prettier": "^2.8.8",
-    "projen": "^0.86.6",
+    "projen": "^0.87.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.0"
