--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jsii-rosetta": "~5.4.0",
     "prettier": "^2.8.8",
     "projen": "^0.91.5",
+    "semver": "^7.6.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.0"
