--- a/.github/workflows/upgrade-jsii-typescript.yml
+++ b/.github/workflows/upgrade-jsii-typescript.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
     inputs:
       new_version:
-        description: New JSII/TypeScript version (e.g. `5.4.0`), without carets or tildes
+        description: New JSII/TypeScript version (e.g. "5.4.0"), without carets or tildes
         required: true
         default: 5.5.0
         type: string
@@ -20,35 +20,26 @@ jobs:
     env:
       CI: "true"
       CHECKPOINT_DISABLE: "1"
+      NEW_VERSION: ${{ inputs.new_version }}
     steps:
       - name: Checkout
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
       - name: Setup Node.js
-        uses: actions/setup-node@1e60f620b9541d16bece96c5465dc8ee9832be0b
+        uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af
         with:
           node-version: 18.12.0
       - name: Install
         run: yarn install
-      - name: Do the upgrade in the right place
-        env:
-          NEW_VERSION: "{{ inputs.newVersion }}"
-        run: |-
-          echo "$NEW_VERSION"
-          sed -i "s/typescriptVersion = ".*";/typescriptVersion = "~$NEW_VERSION";/" ./projenrc.ts
-      - name: Regenerate files
-        env:
-          CI: "false"
-        run: npx projen
+      - name: Run upgrade script
+        run: scripts/update-jsii-typescript.sh $NEW_VERSION
       - name: Get values for pull request
         id: latest_version
-        env:
-          NEW_VERSION: "{{ inputs.newVersion }}"
         run: |-
           NEW_VERSION_SHORT=$(cut -d "." -f 1,2 <<< "$NEW_VERSION")
           echo "value=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "short=$NEW_VERSION_SHORT" >> $GITHUB_OUTPUT
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c
+        uses: peter-evans/create-pull-request@67ccf781d68cd99b580ae25a5c18a1cc84ffff1f
         with:
           commit-message: "chore: upgrade jsii & typescript to v${{ steps.latest_version.outputs.short }}"
           branch: auto/upgrade-jsii-ts-${{ steps.latest_version.outputs.short }}
