chore(ci): pin version of cssstyle to allow upgrade-main to succeed
This can be unpinned when upgrading to Node 20.

--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "cdktf": ">=0.20.0",
     "constructs": ">=10.3.0"
   },
+  "resolutions": {
+    "cssstyle": "4.1.0"
+  },
   "keywords": [
     "cdk",
     "cdktf"
