--- a/.github/workflows/upgrade-jsii-typescript.yml
+++ b/.github/workflows/upgrade-jsii-typescript.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       new_version:
         description: New JSII/TypeScript version (e.g. "5.6.0"), without carets or tildes
-        required: false
+        required: true
         default: 5.7.0
         type: string
 concurrency:
