--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.7.0",
-    "jest-junit": "^15",
+    "jest-junit": "^16",
     "jsii": "~5.5.0",
     "jsii-diff": "^1.106.0",
     "jsii-docgen": "^10.5.0",
     "jsii-pacmak": "^1.106.0",
     "jsii-rosetta": "~5.5.0",
     "prettier": "^2.8.8",
-    "projen": "^0.91.5",
+    "projen": "^0.91.6",
     "semver": "^7.6.3",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
@@ -70,6 +70,9 @@
     "@cdktf/provider-null": ">=10.0.0",
     "cdktf": ">=0.20.0",
     "constructs": ">=10.3.0"
+  },
+  "resolutions": {
+    "cssstyle": "4.1.0"
   },
   "keywords": [
     "cdk",
