--- a/.github/workflows/upgrade-node.yml
+++ b/.github/workflows/upgrade-node.yml
@@ -78,7 +78,7 @@ jobs:
     env:
       CI: "true"
       CHECKPOINT_DISABLE: "1"
-    if: ${{ always() && needs.version.outputs.should_upgrade }}
+    if: always() && needs.version.outputs.should_upgrade
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
